...
                    );
                  } else {
                    return Center(
                      child: Padding(
                        padding: const EdgeInsets.only(left: 10, right: 20),
                        child: ElevatedButton(
                          key: const Key('addBoardButton'),
                          onPressed: createBoard,
                          child: const Icon(Icons.add),
                        ),
                      ),
                    );
                  }
...
